# terraform-sakura-django-sample

./: .gitignore  Makefile  README.md  compose.yml  envfile.example  pyproject.toml
.github/workflows/: terraform-fmt.yml
apps/: models.py  urls.py  views.py
apps/migrations/: 0001_initial.py
config/: settings.py  urls.py
doc/zabbix/: README.md
docker/db/initdb.d/: init.sql
terraform/common/: backend.tf  output.tf  ssh.tf  variables.tf
terraform/enviroment/common/: .terraform.lock.hcl  backend.tf  dns.tf  provider.tf  variable.tf
terraform/enviroment/dev/: .terraform.lock.hcl  ansible.cfg  ansible.tf  autoscale.tf  backend.tf  backup.tf  dns.tf  filter.tf  lb.tf  locals.tf  main.tf  nfs.tf  provider.tf  server.tf  ssh.tf  switch.tf  terraform_remote_state.tf  variable.tf
terraform/enviroment/dev/ansible/: monitoring.yml  playbook.yml  vault-password.txt.example
terraform/enviroment/dev/ansible/roles/batch/defautls/: main.yml
terraform/enviroment/dev/ansible/roles/batch/tasks/: application.yml  main.yml
terraform/enviroment/dev/ansible/vars/: common.yml  infrastructure.yml  lb.yml  nfs.yml  ssl.yml  zabbix.yml
terraform/enviroment/module/acme/: main.tf  output.tf  provider.tf  variable.tf
terraform/enviroment/module/server/: README.md  main.tf  output.tf  provider.tf  variable.tf
terraform/enviroment/prod/: .terraform.lock.hcl  ansible.cfg  ansible.tf  provider.tf  router.tf  ssh.tf  variable.tf
terraform/enviroment/prod/ansible/: playbook.yml
terraform/enviroment/prod/ansible/vars/: application.yml  infrastructure.yml
(+63 files in other folders)
