[tool.poetry]
name = "terraform-sakura-django-sample"
version = "0.1.0"
description = ""
authors = ["Masashi Kayahara <masashi.kayahara@arc-connects.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
